add token url verification middleware

--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,9 @@
 </head>
 
 <body>
+
+    <!-- <img src="http://localhost:3000/image/users/5c3162d9f15530237c2b788e-172.jpg?token=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJ1c2VyIjp7InJvbGUiOiJBRE1JTl9ST0xFIiwic3RhdGUiOnRydWUsImdvb2dsZSI6ZmFsc2UsIl9pZCI6IjVjMzFmZTA1NGMzNzE4MjRkODVhNTVlZiIsIm5hbWUiOiJUZXN0IDEiLCJlbWFpbCI6InRlc3QxQGdtYWlsLmNvbSIsIl9fdiI6MH0sImlhdCI6MTU0NzQzMTc4OCwiZXhwIjoxNTQ3NjA0NTg4fQ.elQO6yHHDbpkcz2N8SxM9BAp5254Qkxus4b4Jz5rEhU" alt=""> -->
+
     <div class="g-signin2" data-onsuccess="onSignIn"></div>
     <a href="#" onclick="signOut();">Sign out</a>
     <script>
